tests/lean/1062.lean.expected.out
1062.lean:11:2-11:7: error: no goals to be solved
